    d/p/wayland-always-sync-state-after-a-frame-is-painted.patch, merged
    upstream.
  * Bump Build-Depends on libxrandr-dev to (>= 2:1.5.0). This means we can
    drop d/p/0001-Fix-division-by-zero-when-calculating-the-refresh-ra.patch.
    Upstream has already applied a similar patch for the Xrandr 1.5 code path
    and we no longer need the workaround for Xrandr 1.3.

 -- Michael Biebl <biebl@debian.org>  Sat, 01 Oct 2016 14:34:59 +0200

gtk+3.0 (3.22.0-2) unstable; urgency=medium

  * d/p/wayland-Avoid-negative-size-constraints.patch
    - Added. Resolve unexpected order of size-allocation signals, fixes issues
      with placing clutter-gtk widgets on wayland.
      (From upstream git, bgo#771915)
  * d/p/wayland-always-sync-state-after-a-frame-is-painted.patch
    - Added. Always sync the state after a frame paint. Avoids things getting
      out of sync when painting using GL as e.g. epiphany does these days.
      (From upstream git, bgo#771553)

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 30 Sep 2016 14:36:52 +0200

gtk+3.0 (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Drop dbg packages now that we have automatic dbgsym packages.
  * Bump debhelper compat level to 9.

 -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 20:48:18 +0200

gtk+3.0 (3.21.6-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * New upstream development release.
  * Update (build-)dependencies according to configure.ac changes:
    - bump wayland-protocols to >= 1.7
  * Update debian/libgtk-3-0.symbols with a few scrolled_window additions.

  [ Michael Biebl ]
  * Refresh patches.

 -- Andreas Henriksson <andreas@fatal.se>  Wed, 14 Sep 2016 10:35:59 +0200

gtk+3.0 (3.21.5-3) unstable; urgency=medium

  * Mark two more reftests as known_fail and make test-suite failures fatal
    again.

 -- Michael Biebl <biebl@debian.org>  Wed, 31 Aug 2016 23:41:32 +0200

gtk+3.0 (3.21.5-2) unstable; urgency=medium

  * Mark the gdk_wayland_* symbols as linux-any.