@@ -24,26 +24,23 @@ Build-Depends: debhelper (>= 9.20141010),
                libatk-bridge2.0-dev,
                libegl1-mesa-dev [linux-any],
                libepoxy-dev,
+               libfontconfig1-dev,
                libharfbuzz-dev (>= 0.9),
                libwayland-dev (>= 1.9.91) [linux-any],
                wayland-protocols (>= 1.7) [linux-any],
                libxkbcommon-dev (>= 0.2.0),
-               libx11-dev (>= 2:1.3.3-2),
-               libxext-dev (>= 2:1.1.1-3),
-               libxi-dev (>= 2:1.3-4),
+               libx11-dev,
+               libxext-dev,
+               libxi-dev,
                libxml2-utils,
                libxrandr-dev (>= 2:1.5.0),
-               libxt-dev,
-               libxrender-dev (>= 1:0.9.5-2),
-               libxft-dev,
-               libxcursor-dev (>= 1:1.1.10-2),
-               libxcomposite-dev (>= 1:0.2.0-3),
-               libxdamage-dev (>= 1:1.0.1-3),
+               libxcursor-dev,
+               libxcomposite-dev,
+               libxdamage-dev,
                libxkbfile-dev,
-               libxinerama-dev (>= 2:1.1-3),
-               libxfixes-dev (>= 1:3.0.0-3),
+               libxinerama-dev,
+               libxfixes-dev,
                libcairo2-dev (>= 1.14.0),
-               x11proto-xext-dev,
                libcups2-dev (>= 1.2),
                libcolord-dev (>= 0.1.9),
                librest-dev,
@@ -147,14 +144,14 @@ Depends: libgtk-3-0 (= ${binary:Version}),
          libgtk-3-common,
          ${misc:Depends},
          ${shlibs:Depends},
-         libglib2.0-dev (>= 2.49.3),
+         libglib2.0-dev (>= 2.49.4),
          libgdk-pixbuf2.0-dev (>= 2.30.0),
          libpango1.0-dev (>= 1.37.3),
          libatk1.0-dev (>= 2.15.1),
          libatk-bridge2.0-dev,
          libcairo2-dev (>= 1.14.0),
          libepoxy-dev (>= 1.0),
-         libharfbuzz-dev (>= 0.9),
+         libfontconfig1-dev,
          libx11-dev,
          libxext-dev,
          libxinerama-dev,
@@ -276,7 +273,7 @@ Depends: ${misc:Depends},
          libgail-3-0 (= ${binary:Version}),
          libgtk-3-dev (= ${binary:Version}),
          pkg-config,
-         libatk1.0-dev (>= 2.2.0)
+         libatk1.0-dev
 Suggests: libgail-3-doc
 Description: GNOME Accessibility Implementation Library -- development files
  Gail implements ATK interfaces for GTK+ widgets which are dynamically
