@@ -8,6 +8,14 @@ gtk+3.0 (3.22.1-1) UNRELEASED; urgency=medium
     drop d/p/0001-Fix-division-by-zero-when-calculating-the-refresh-ra.patch.
     Upstream has already applied a similar patch for the Xrandr 1.5 code path
     and we no longer need the workaround for Xrandr 1.3.
+  * Update Build-Depends as per configure.ac:
+    - Add libfontconfig1-dev.
+    - Drop libxt-dev, libxft-dev, libxrender-dev and x11proto-xext-dev.
+    - Drop Debian specific versions for various libx*-dev packages. Those
+      versions were a long time ago for gtk+2.0 when the udeb was switched
+      from DirectFB to Xlib.
+  * Update Depends of libgtk-3-dev to match the dependencies declared in the
+    pkg-config .pc files.
 
  -- Michael Biebl <biebl@debian.org>  Sat, 01 Oct 2016 14:34:59 +0200
 
